--- a/shop/src/main/resources/application.yml
+++ b/shop/src/main/resources/application.yml
@@ -4,9 +4,9 @@ spring:
     name: shop
 
   datasource:
-    url: jdbc:mysql://localhost:3306/mysql_dev?serverTimezone=GMT
+    url: jdbc:mysql://120.27.248.163:3306/mysql_dev?serverTimezone=GMT
     username: root
-    password: 123456
+    password: QWEr105521+
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 
